# sflowtool

./: README.md
.github/workflows/: build.yml
src/: Makefile.am  config.h  sflow_xdr.h  sflowtool.c
src/decoder/: json_protocols.c  json_protocols.h  output_json.c
src/decoder/include/: decoder.h  json_loader.h  protocol.h
src/decoder/src/: decoder.c  field_extract.c  json_loader.c  protocol.c
